# lofi-atc

./: .gitattributes  .gitignore  README.md  STREAMS.md
client/: index.html  package.json  tailwind.config.js
client/src/: App.svelte  app.css
client/src/lib/: api.js
client/src/lib/audio/: audioEngine.js
client/src/lib/components/: CircularKnob.svelte  MusicSelector.svelte  StationSelector.svelte  VolumeControl.svelte
client/src/lib/components/ui/: button.svelte  card.svelte  sheet.svelte  slider.svelte
server/: Cargo.toml
server/data/: top_feeds.json
server/scraper/: README.md  com.lofi-atc.scraper.plist  lofi-atc-scraper.service  requirements.txt  run_scraper.sh  top_feeds_playwright.py  top_feeds_scraper.py
server/src/: main.rs
